[gd_scene load_steps=3 format=3 uid="uid://ijqxn7khforp"]

[ext_resource type="Script" path="res://scripts/AreaPeeker.gd" id="1_4wb44"]
[ext_resource type="Texture2D" uid="uid://ctn4qrfbnv0qi" path="res://assets/icons/zaap.png" id="2_tb1vn"]

[node name="AreaPeeker" type="PanelContainer" node_paths=PackedStringArray("back_button")]
custom_minimum_size = Vector2(0, 80)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -22.5
offset_right = 4.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("1_4wb44")
back_button = NodePath("HBC/BackButton")

[node name="HBC" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="BackButton" type="Button" parent="HBC"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
focus_mode = 0
disabled = true
icon = ExtResource("2_tb1vn")

[node name="ScrollContainer" type="ScrollContainer" parent="HBC"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBC" type="HBoxContainer" parent="HBC/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="button_up" from="HBC/BackButton" to="." method="_on_back_button_button_up"]
